@@ -300,14 +300,6 @@
     weight="40"
     />
 
-  <browser:page
-    for="zeit.content.article.interfaces.IArticle"
-    layer="zeit.cms.browser.interfaces.ICMSLayer"
-    name="edit.form.metadata-nl"
-    class=".form.MetadataNL"
-    permission="zope.View"
-    />
-
   <browser:viewlet
     for="zeit.content.article.interfaces.IArticle"
     layer="zeit.cms.browser.interfaces.ICMSLayer"
